--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.0.0-beta.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.4",
     "precss": "^3.1.2",
