--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
-module.exports = {
+{
   "env": {
-    "browser": true,
-    "node": true,
-    "commonjs": true,
-    "es6": true
+    "browser": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
@@ -26,5 +23,15 @@ module.exports = {
       "error",
       "always"
     ]
-  }
-};
+  },
+  "overrides": [
+    {
+      "files": "src/*.js",
+      "env": { "browser": true }
+    },
+    {
+      "files": "webpack.config.js",
+      "env": { "node": true, "commonjs": true }
+    }
+  ]
+}
